--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -14,6 +14,7 @@
     <script src="lib/angular-animate/angular-animate.min.js"></script>  
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="https://js.moltin.com/v1"></script>
 
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
@@ -75,6 +76,22 @@
     <script src="components/cart/cart.controller.js"></script>
     <script src="components/cart/cart.component.js"></script>
     <!-- Cart Component End -->
+
+    <!-- Cart Component -->
+    <link rel="stylesheet" href="components/checkout/checkout.css">
+    <script src="components/checkout/checkout.js"></script>
+    <script src="components/checkout/checkout.service.js"></script>
+    <script src="components/checkout/checkout.controller.js"></script>
+    <script src="components/checkout/checkout.component.js"></script>
+    <!-- Cart Component End -->
+
+    <!-- Track Component -->
+    <link rel="stylesheet" href="components/track/track.css">
+    <script src="components/track/track.js"></script>
+    <script src="components/track/track.service.js"></script>
+    <script src="components/track/track.controller.js"></script>
+    <script src="components/track/track.component.js"></script>
+    <!-- Track Component End -->
 
     <script src="app.js"></script>
     <script src="common/app.directives.js"></script>
