changes for terms

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
     <script src="components/track/track.component.js"></script>
     <!-- Track Component End -->
 
+    <!-- Doc Component -->
+    <link rel="stylesheet" href="components/doc/doc.css">
+    <script src="components/doc/doc.js"></script>
+    <script src="components/doc/doc.service.js"></script>
+    <script src="components/doc/doc.controller.js"></script>
+    <script src="components/doc/doc.component.js"></script>
+    <!-- Doc Component End -->
+
     <script src="app.js"></script>
     <script src="common/app.directives.js"></script>
     <script src="common/api.config.js"></script>
