added paytm support

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
     <script src="components/doc/doc.component.js"></script>
     <!-- Doc Component End -->
 
+    <!-- Confirmation Component -->
+    <link rel="stylesheet" href="components/confirmation/confirmation.css">
+    <script src="components/confirmation/confirmation.js"></script>
+    <script src="components/confirmation/confirmation.service.js"></script>
+    <script src="components/confirmation/confirmation.controller.js"></script>
+    <script src="components/confirmation/confirmation.component.js"></script>
+    <!-- Confirmation Component End -->
+
     <script src="app.js"></script>
     <script src="common/app.directives.js"></script>
     <script src="common/api.config.js"></script>
