--- a/common/documents/shipping.html
+++ b/common/documents/shipping.html
@@ -17,7 +17,7 @@
         <div class="bs-wizard-info text-center">Pay using Paytm</div>
     </div>
 
-    <div class="col-xs-3 bs-wizard-step active">
+    <div class="col-xs-3 bs-wizard-step complete">
         <!-- complete -->
         <div class="text-center bs-wizard-stepnum">Shipping</div>
         <div class="progress"><div class="progress-bar"></div></div>
@@ -25,7 +25,7 @@
         <div class="bs-wizard-info text-center">Shipping done and tracking id shared</div>
     </div>
 
-    <div class="col-xs-3 bs-wizard-step disabled">
+    <div class="col-xs-3 bs-wizard-step complete">
         <!-- active -->
         <div class="text-center bs-wizard-stepnum">Delivery</div>
         <div class="progress"><div class="progress-bar"></div></div>
