--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/all.min.css">
     <script src="https://js.moltin.com/v1"></script>
-    <script src="dist/scripts/all.min.js"></script>
+    <script src="dist/scripts/all.js"></script>
 </head>
 <body>
     <header></header>
