--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="google-site-verification" content="GZtTKod0vk3czWVwQJPn-IQfR__scorCtrO0g-6L5oc" />
+	<meta name="p:domain_verify" content="c5874bc0c696474187264d334c74a9b5"/>
     <title>Young and Energetic</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
