--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="dist/css/all.min.css">
     <script src="https://js.moltin.com/v1"></script>
     <script src="dist/scripts/all.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62900802-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-62900802-3');
+</script>
+
 </head>
 <body>
     <header></header>
