moltin v2 inital changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/png" href="http://shop.pentagrit.com/common/images/favicon.png">
     <link rel="stylesheet" href="dist/css/all.min.css">
-    <script src="https://js.moltin.com/v1"></script>
-    <script src="dist/scripts/all.min.js"></script>
+    <script src="https://unpkg.com/@moltin/sdk@3.11.0/dist/moltin.umd.js"></script>
+    <script src="dist/scripts/all.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62900802-3"></script>
 <script>
