--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/png" href="http://shop.pentagrit.com/common/images/favicon.png">
     <link rel="stylesheet" href="dist/css/all.min.css">
     <script src="https://unpkg.com/@moltin/sdk@3.11.0/dist/moltin.umd.js"></script>
+	<script src="lazy.js"></script>
     <script src="dist/scripts/all.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62900802-3"></script>
